fix: display controls in video on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,5 +27,12 @@ body {
   }
 }
 
+@layer components {
+  video::-webkit-media-controls {
+    display: none !important;
+  }
+}
+
+
 
 
